Implemented adapter for test suite