@@ -10,15 +10,24 @@ repositories {
         credentials {
             username = project.findProperty("gpr.user") ?: "sofiasdz"
             password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+
         }
     }
 }
 
 dependencies {
-    implementation 'TpIngSis:parser:1.1-SNAPSHOT'
+    implementation 'TpIngSis:parser:1.4-SNAPSHOT'
     testImplementation 'junit:junit:4.13'
 }
 
 test {
     useJUnit()
+}
+sourceCompatibility = 14
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
 }
